--- a/Portfolio Allocation based on Buffet's Choice.ipynb
+++ b/Portfolio Allocation based on Buffet's Choice.ipynb
@@ -171,8 +171,7 @@
     "%pip install missingno\n",
     "%pip install xgboost\n",
     "%pip install tensorflow \n",
-    "%pip install keras\n",
-    "%pip install ortools"
+    "%pip install keras"
    ]
   },
   {
@@ -845,7 +844,6 @@
    "source": [
     "# Load the CSV file to examine its content\n",
     "fin_data = pd.read_csv('2014-2024 Buffet Portfolio - financial ratios.csv')\n",
-    "fin_data.head()\n",
     "fin_data.info()"
    ]
   },
