--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "Warren Buffet is the world's most prominent value investor. We decided to analyze his portfolio to see if there were any improvements to be made. We make use of the work of:\n",
+    "Warren Buffet is the world's most prominent value investor. We decided to analyze his portfolio to see if there were any improvements to be made. We loosely make use of the work of:\n",
     "- Michael Pinelis and David Ruppert (Machine learning portfolio allocation(2021))\n",
     "-  Shihao Gu, Bryan Kelly, and Dacheng Xiu (Empirical Asset Pricing via Machine\n",
     " Learning(2019))"
@@ -997,23 +997,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(merged_data.RET.dtype)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -1265,262 +1248,246 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TICKER</th>\n",
-       "      <th>date</th>\n",
-       "      <th>CAPEI</th>\n",
-       "      <th>bm</th>\n",
-       "      <th>evm</th>\n",
-       "      <th>pe_op_basic</th>\n",
-       "      <th>pe_op_dil</th>\n",
-       "      <th>pe_exi</th>\n",
-       "      <th>pe_inc</th>\n",
-       "      <th>ps</th>\n",
-       "      <th>...</th>\n",
-       "      <th>TICKER_encoded</th>\n",
-       "      <th>SHRCD_encoded</th>\n",
-       "      <th>EXCHCD_encoded</th>\n",
-       "      <th>SICCD_encoded</th>\n",
-       "      <th>market_cap</th>\n",
-       "      <th>RET_calc</th>\n",
-       "      <th>RET_interp</th>\n",
-       "      <th>TB3MS</th>\n",
-       "      <th>T10Y2Y</th>\n",
-       "      <th>BAA10Y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-01-31</td>\n",
-       "      <td>17.588</td>\n",
-       "      <td>0.327</td>\n",
-       "      <td>7.993</td>\n",
-       "      <td>12.506</td>\n",
-       "      <td>12.594</td>\n",
-       "      <td>12.594</td>\n",
-       "      <td>12.594</td>\n",
-       "      <td>2.613</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>4.465297e+08</td>\n",
-       "      <td>0.001637</td>\n",
-       "      <td>0.001637</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>2.464286</td>\n",
-       "      <td>2.334762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-02-28</td>\n",
-       "      <td>18.776</td>\n",
-       "      <td>0.296</td>\n",
-       "      <td>7.764</td>\n",
-       "      <td>0.463</td>\n",
-       "      <td>0.466</td>\n",
-       "      <td>0.466</td>\n",
-       "      <td>0.466</td>\n",
-       "      <td>2.698</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>4.694003e+08</td>\n",
-       "      <td>-0.002710</td>\n",
-       "      <td>-0.002710</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>2.382632</td>\n",
-       "      <td>2.390000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-03-31</td>\n",
-       "      <td>18.501</td>\n",
-       "      <td>0.296</td>\n",
-       "      <td>7.764</td>\n",
-       "      <td>0.472</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>2.658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>4.625330e+08</td>\n",
-       "      <td>-0.000224</td>\n",
-       "      <td>-0.000224</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>2.324286</td>\n",
-       "      <td>2.340952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-04-30</td>\n",
-       "      <td>20.332</td>\n",
-       "      <td>0.296</td>\n",
-       "      <td>7.764</td>\n",
-       "      <td>0.519</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>2.921</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.082923e+08</td>\n",
-       "      <td>-0.003782</td>\n",
-       "      <td>-0.003782</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>2.288095</td>\n",
-       "      <td>2.199048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-05-31</td>\n",
-       "      <td>20.513</td>\n",
-       "      <td>0.302</td>\n",
-       "      <td>7.873</td>\n",
-       "      <td>0.537</td>\n",
-       "      <td>0.540</td>\n",
-       "      <td>0.540</td>\n",
-       "      <td>0.540</td>\n",
-       "      <td>3.097</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.452542e+08</td>\n",
-       "      <td>-0.003746</td>\n",
-       "      <td>-0.003746</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>2.170000</td>\n",
-       "      <td>2.203810</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 95 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  TICKER       date   CAPEI     bm    evm  pe_op_basic  pe_op_dil  pe_exi  \\\n",
-       "0   AAPL 2014-01-31  17.588  0.327  7.993       12.506     12.594  12.594   \n",
-       "1   AAPL 2014-02-28  18.776  0.296  7.764        0.463      0.466   0.466   \n",
-       "2   AAPL 2014-03-31  18.501  0.296  7.764        0.472      0.475   0.475   \n",
-       "3   AAPL 2014-04-30  20.332  0.296  7.764        0.519      0.523   0.523   \n",
-       "4   AAPL 2014-05-31  20.513  0.302  7.873        0.537      0.540   0.540   \n",
-       "\n",
-       "   pe_inc     ps  ...  TICKER_encoded  SHRCD_encoded  EXCHCD_encoded  \\\n",
-       "0  12.594  2.613  ...             0.0            0.0             1.0   \n",
-       "1   0.466  2.698  ...             0.0            0.0             1.0   \n",
-       "2   0.475  2.658  ...             0.0            0.0             1.0   \n",
-       "3   0.523  2.921  ...             0.0            0.0             1.0   \n",
-       "4   0.540  3.097  ...             0.0            0.0             1.0   \n",
-       "\n",
-       "   SICCD_encoded    market_cap  RET_calc  RET_interp  TB3MS    T10Y2Y  \\\n",
-       "0           10.0  4.465297e+08  0.001637    0.001637   0.04  2.464286   \n",
-       "1           10.0  4.694003e+08 -0.002710   -0.002710   0.05  2.382632   \n",
-       "2           10.0  4.625330e+08 -0.000224   -0.000224   0.05  2.324286   \n",
-       "3           10.0  5.082923e+08 -0.003782   -0.003782   0.03  2.288095   \n",
-       "4           10.0  5.452542e+08 -0.003746   -0.003746   0.03  2.170000   \n",
-       "\n",
-       "     BAA10Y  \n",
-       "0  2.334762  \n",
-       "1  2.390000  \n",
-       "2  2.340952  \n",
-       "3  2.199048  \n",
-       "4  2.203810  \n",
-       "\n",
-       "[5 rows x 95 columns]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "featureEngineeringDf = merged_data.copy()\n",
-    "\n",
-    "# Ensure data is sorted by TICKER and date\n",
-    "featureEngineeringDf = featureEngineeringDf.sort_values(['TICKER', 'date'])\n",
-    "\n",
-    "featureEngineeringDf.head()"
+    "# 6. Models and their training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['TICKER', 'date', 'CAPEI', 'bm', 'evm', 'pe_op_basic', 'pe_op_dil',\n",
-       "       'pe_exi', 'pe_inc', 'ps', 'pcf', 'dpr', 'npm', 'opmbd', 'opmad', 'gpm',\n",
-       "       'ptpm', 'cfm', 'roa', 'roe', 'roce', 'efftax', 'aftret_eq',\n",
-       "       'aftret_invcapx', 'aftret_equity', 'pretret_noa', 'pretret_earnat',\n",
-       "       'GProf', 'equity_invcap', 'debt_invcap', 'totdebt_invcap',\n",
-       "       'capital_ratio', 'int_debt', 'int_totdebt', 'cash_lt', 'invt_act',\n",
-       "       'rect_act', 'debt_at', 'debt_ebitda', 'short_debt', 'curr_debt',\n",
-       "       'lt_debt', 'profit_lct', 'ocf_lct', 'cash_debt', 'fcf_ocf', 'lt_ppent',\n",
-       "       'dltt_be', 'debt_assets', 'debt_capital', 'de_ratio', 'intcov',\n",
-       "       'intcov_ratio', 'cash_ratio', 'quick_ratio', 'curr_ratio',\n",
-       "       'cash_conversion', 'inv_turn', 'at_turn', 'rect_turn', 'pay_turn',\n",
-       "       'sale_invcap', 'sale_equity', 'sale_nwc', 'rd_sale', 'adv_sale',\n",
-       "       'staff_sale', 'accrual', 'ptb', 'PEG_trailing', 'divyield', 'COMNAM',\n",
-       "       'SHRCD', 'EXCHCD', 'SICCD', 'PRC', 'VOL', 'RET', 'SHROUT', 'BIDLO',\n",
-       "       'ASKHI', 'OPENPRC', 'vwretd', 'ewretd', 'sprtrn', 'TICKER_encoded',\n",
-       "       'SHRCD_encoded', 'EXCHCD_encoded', 'SICCD_encoded', 'market_cap',\n",
-       "       'RET_calc', 'RET_interp', 'TB3MS', 'T10Y2Y', 'BAA10Y'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "featureEngineeringDf.columns"
+    "# Define the independent variables (X) and the dependent variable (y)\n",
+    "features = rf_data.columns[~rf_data.columns.isin(['TICKER', 'RET'])].tolist()\n",
+    "X = rf_data[features]\n",
+    "y = rf_data['RET']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# View features\n",
+    "# Create a Random Forest model\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# Get feature importances and sort them\n",
+    "feature_importances = model.feature_importances_\n",
+    "indices = np.argsort(feature_importances)[::-1]\n",
+    "\n",
+    "# Display feature importances\n",
+    "print(\"Feature ranking:\")\n",
+    "for f in range(X.shape[1]):\n",
+    "    print(f\"{f + 1}. feature {indices[f]} ({feature_importances[indices[f]]}) - {features[indices[f]]}\")\n",
+    "\n",
+    "# You can select features based on their importance, for example, selecting the top N important features\n",
+    "selected_features = indices[:10]  # Select the top 10 important features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Selected features:\", [features[i] for i in selected_features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model\n",
+    "\n",
+    "# 2. Model creation and training\n",
+    "rf_model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# 3. Model evaluation\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "print(f\"R-squared Score: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Feature Importance\n",
+    "feature_importance = pd.DataFrame({'feature': X.columns, 'importance': rf_model.feature_importances_})\n",
+    "feature_importance = feature_importance.sort_values('importance', ascending=False)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(feature_importance['feature'][:10], feature_importance['importance'][:10])\n",
+    "plt.xticks(rotation=45, ha='right')\n",
+    "plt.title('Top 10 Feature Importances')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature selection\n",
+    "selector = SelectFromModel(RandomForestRegressor(n_estimators=100, random_state=42))\n",
+    "X_selected = selector.fit_transform(X, y)\n",
+    "\n",
+    "# Standardization\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X_selected)\n",
+    "\n",
+    "# Time series cross-validation\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "\n",
+    "# Model parameters\n",
+    "rf_params = {\n",
+    "    'n_estimators': 1000,\n",
+    "    'max_depth': 10,\n",
+    "    'min_samples_split': 5,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'max_features': 'sqrt',\n",
+    "    'random_state': 42\n",
+    "}\n",
+    "\n",
+    "# Train the model\n",
+    "rf_model = RandomForestRegressor(**rf_params)\n",
+    "\n",
+    "# Use time series cross-validation\n",
+    "r2_scores = []\n",
+    "for train_index, test_index in tscv.split(X_scaled):\n",
+    "    X_train, X_test = X_scaled[train_index], X_scaled[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    \n",
+    "    rf_model.fit(X_train, y_train)\n",
+    "    r2_scores.append(rf_model.score(X_test, y_test))\n",
+    "\n",
+    "print(f\"Average R2 score: {np.mean(r2_scores)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(NeuralNetwork, self).__init__()\n",
+    "        self.layer1 = nn.Linear(4, 32)\n",
+    "        self.layer2 = nn.Linear(32, 16)\n",
+    "        self.layer3 = nn.Linear(16, 8)\n",
+    "        self.output = nn.Linear(8, 1)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.relu(self.layer1(x))\n",
+    "        x = self.relu(self.layer2(x))\n",
+    "        x = self.relu(self.layer3(x))\n",
+    "        x = self.output(x)\n",
+    "        return x\n",
+    "\n",
+    "# Example usage\n",
+    "model = NeuralNetwork()\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "\n",
+    "# Dummy data\n",
+    "inputs = torch.randn(10, 4)\n",
+    "targets = torch.randn(10, 1)\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(100):\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = model(inputs)\n",
+    "    loss = criterion(outputs, targets)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    print(f'Epoch {epoch+1}, Loss: {loss.item()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Prescriptive Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Assessment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
