--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -28,27 +28,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "import seaborn as sns\n",
-    "import xgboost as xgb\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "import base64\n",
     "from IPython.display import Image, display\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "import cvxpy as cp\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from xgboost import XGBRegressor\n",
-    "from pypfopt import risk_models, expected_returns, BlackLittermanModel, plotting\n",
+    "from pypfopt import risk_models, expected_returns, plotting\n",
     "from pypfopt.efficient_frontier import EfficientFrontier\n",
-    "from pypfopt.expected_returns import mean_historical_return\n",
-    "from pypfopt.risk_models import CovarianceShrinkage\n",
     "from sklearn.feature_selection import SelectKBest, f_regression"
    ]
   },
