correct some typos

--- a/02_Buffett_Portfolio_Analysis_and_Optimization.ipynb
+++ b/02_Buffett_Portfolio_Analysis_and_Optimization.ipynb
@@ -9337,16 +9337,13 @@
     "\n",
     "We also use machine learning models to predict and opimize the portfolio, like random forest and XGBoost. By selecting the best features and hyperparameters, we find that when the holding period is 12 months, the portfolio has a high expected annual return (27.56%) and low annual volatility (6.39%), indicating that it is a good investment portfolio. We also find that the portfolio has a high Sharpe ratio (1.87), indicating that it is a good investment portfolio with low risk.\n",
     "\n",
-    "By comparing these two methods we find that the machine learning models have a higher Sharpe ratio and lower MSE, indicating that they are better at predicting and optimizing the portfolio when it is finely tuned. More importantly, machine learning models provide explanations for the features that contribute to the portfolio's performance, which may help investors make better investment decisions even with little historical data.\n",
+    "By comparing these two methods we find that the machine learning models have a higher Sharpe ratio, indicating that they are better at predicting and optimizing the portfolio when it is finely tuned. More importantly, machine learning models provide explanations for the features that contribute to the portfolio's performance, which may help investors make better investment decisions even with little historical data in the field.\n",
     "\n",
     "Still there is room for improvement:\n",
-    "    - Feature engineering can be improved by reducing multi-collinearity and adding more features that may be relevant to the returns of the portfolio.\n",
-    "    - Model optimization can be improved by trying different models and hyperparameters to find the best model for the data.\n",
-    "    - Portfolio optimization can be improved by trying different optimization methods and risk management strategies to maximize returns and minimize risk.\n",
-    "    - We could also try to use more sophisticated models, like GARCH or LSTM, to predict the returns of the portfolio.\n",
-    "\n",
-    "Making use of a bit of knowledge from Gu et al we find that Buffet actually has quite a great portfolio but perhaps needs to reduce his shares in some already large companies. Companies that could require reduced exposure include Apple.\n",
-    "    \"In tandem with our portfolio we find that Buffet [reduced](https://www.cnbc.com/2024/08/03/warren-buffetts-berkshire-hathaway-sold-nearly-half-its-stake-in-apple.html) his number of shares in Apple by nearly half, far greater than our estimated short position of 12%.\"\n",
+    "- Feature engineering can be improved by reducing multi-collinearity and adding more features that may be relevant to the returns of the portfolio.\n",
+    "- Model optimization can be improved by trying different models and hyperparameters to find the best model for the data.\n",
+    "- Portfolio optimization can be improved by trying different optimization methods and risk management strategies to maximize returns and minimize risk.\n",
+    "- We could also try to use more sophisticated models, like GARCH or LSTM, to predict the returns of the portfolio.\n",
     "\n",
     "Making use of a bit of knowledge from Gu et al we find that Buffet actually has quite a great portfolio but perhaps needs to reduce his shares in some already large companies. Companies that could require reduced exposure include Apple.\n",
     "\n",
